--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 encoding: utf-8
 
 # SEO相关信息
-title: TMaize Blog
-description: TMaize的个人博客
-keywords: TMaize,Blog,Java,Html,JavaScript
-author: TMaize
-footerText: 'Copyright © 2016 皖ICP备16016174号'
+title: Kouen 
+description: Kouen
+keywords: Kouen,Blog,Java,Html,JavaScript,CD,Share
+author: Kouen
+footerText: 'Copyright © 2021 Kouen
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
@@ -17,7 +17,7 @@ exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.
 
 # 域名配置
 # baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
-domainUrl: 'https://blog.tmaize.net'
+domainUrl: 'https://kouen.live'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
@@ -50,38 +50,9 @@ extMath: false
 
 # 友情链接
 links:
-  - title: 文科中的技术宅
-    url: https://www.townwang.com
-  - title: Auuu Nya Blog
-    url: http://mu1er.cn
-  - title: 春风十里
-    url: https://www.geek-era.com
-  - title: 阿川的个人博客
-    url: https://achuan.io
-  - title: 魏文成博客
-    url: https://www.wwc.ren
-  - title: 06m
-    url: https://www.06m.me
-  - title: 达达知识
-    url: https://www.dadapush.com
-  - title: 祈雨的博客
-    url: https://wakzz.cn
-  - title: hongCYu’s Blog
-    url: https://hongcyu.cn
-  - title: Sorryfu
-    url: https://fushaolei.github.io
-  - title: 简单的人生笔记
-    url: https://yoyling.com
-  - title: oneNeko的博客
-    url: https://blog.oneneko.com
-  - title: Py's Whisper
-    url: https://whisper.pyliubaolin.top
-  - title: Yuyao's Blog
-    url: http://hellocode.ink
-  - title: 木叶的博客
-    url: https://muye.ml
-  - title: Stansec
-    url: https://standeblog.com
-  - title: Wenn的个人博客
-    url: https://wenn.tech
+  - title: 
+    url: 
+  - title: 
+    url: 
+
 
