--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: TMaize Blog
 description: TMaize的个人博客
 keywords: TMaize,Blog,Java,Html,JavaScript
 author: TMaize
-footerText: 'Copyright © 2016 皖ICP备16016174号'
+footerText: 'Copyright © 2021'
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
@@ -17,7 +17,7 @@ exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.
 
 # 域名配置
 # baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
-domainUrl: 'https://blog.tmaize.net'
+domainUrl: 'https://kouen.live'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
@@ -27,15 +27,15 @@ tucaoUrl: https://support.qq.com/product/86335
 menu:
   - title: 首页
     url: /
-  - title: 归类
+  - title: 分類
     url: /pages/categories.html
-  - title: 搜索
+  - title: 検索 
     url: /pages/search.html
-  - title: 友链
+  - title: リンク
     url: /pages/links.html
-  - title: 留言
+  - title: コメント
     url: /pages/chat.html
-  - title: 关于
+  - title: Infor
     url: /pages/about.html
 
 # 点击页面文字冒出特效,不需要请设置为false
