--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ extClickEffect: true
 
 # Google Adsense,不需要请设置为false
 # _includes/ext-adsense.html 里面修改为自己的配置
-extAdsense: false
+extAdsense: true
 
 # 数学公式支持，比较影响加载速度,不需要请设置为false
 extMath: true
