--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,6 @@ menu:
     url: /pages/search.html
   - title: リンク
     url: /pages/links.html
-  - title: コメント
-    url: /pages/chat.html
   - title: Infor
     url: /pages/about.html
 
@@ -46,7 +44,7 @@ extClickEffect: true
 extAdsense: true
 
 # 数学公式支持，比较影响加载速度,不需要请设置为false
-extMath: true
+extMath: false
 
 # 友情链接
 links:
